<resources>
    <string name="bullshit">Please take a screenshot.\nWhat a terrible failure!\n%s\nPlease send this file to developers:\n%s</string>
    <string name="bullshit_eaten">What a terrible failure!\n%s\nRelative data has been sent to the developer for analysis.</string>
    <string name="app_name">Hmmsim Routes</string>
    <string name="tab_text_info">Bulletin</string>
    <string name="tab_text_download">Download</string>
    <string name="tab_text_manage">Manage</string>

    <string name="alert_install">Install this route?\n%s</string>
    <string name="alert_abort">Stop installing this route?\n%s</string>
    <string name="alert_remove">Uninstall this route?\n%s</string>
    <string name="alert_hmmsim">Start Hmmsim?</string>

    <string name="fetch_error_message">Fetching finished with %d Errors.\n
        Please contact developers. The program can still run normally.</string>
    <string name="fetch_err_nosrc">ERROR: Cannot get any server!\
        Check your network connection, or contact developer!</string>
    <string name="fetch_err_update">ERROR: Your client is outdated! Please update! Minimal protocol ver: %s</string>
    <string name="permission_fail">%s permission allows us to install routes. Please allow this in App Settings.</string>
    <string name="permission_restart">Please restart this app.</string>
    <string name="info_download_started">Download started.</string>
    <string name="info_download_finished">%s Download finished.</string>
    <string name="info_download_aborted">%s\nDownload aborted.</string>
    <string name="info_download_failed">%s\nDownload interrupted!\n%s</string>
    <string name="info_download_start_failed">Unable to start download!</string>
    <string name="info_download_abort_failed">Unable to abort download!</string>
    <string name="info_fetch_text">Fetching remote description…</string>
    <string name="info_fetch_text_fail">Failed fetching remote description!\n%s\n%s</string>
    <string name="info_clear_temp">Cache cleared.</string>
    <string name="info_update_pack">Update is available for %d packages!\nPlease see Manage page for detail.</string>
    <string name="info_update_app">This app can be updated.\nVersion %s\n%s\n\nIf automated update failed please download manually.</string>
    <string name="info_update_manual">Manual Download</string>
    <string name="info_no_network">It seems network connection is not available.\nBCS cannot download packages.\nRemoving local packages is still possible.</string>
    <string name="info_no_browser">It seems that no internet browser is installed.\nPlease download and install one.</string>
    <string name="info_update_start">Download started, Please wait…</string>
    <string name="info_hmmsim_fail">Hmmsim is not installed.</string>
    <string name="info_exit_again">Press again to exit.</string>
    <string name="info_log_sent">Report sent!</string>

    <string name="text_update_avail">Updated: %s</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="text_manual_install">Manually installed</string>
    <string name="text_id">ID</string>
    <string name="text_author">Author</string>
    <string name="text_maintainer">Maintainer</string>
    <string name="text_version">Version</string>
    <string name="text_date">Date</string>
    <string name="text_homepage">Homepage</string>
    <string name="text_contact">Contact</string>
    <string name="text_uploader">Uploader</string>
    <string name="text_apiurl">API Url</string>
    <string name="text_noinfo">There is no content of this type.</string>
    <string name="text_abuse">For abuse or copyright claims, please contact the uploader.
    If your demand is not satisfied, you can contact server maintainers:</string>
    <string name="text_developer">BVE Content Service Client\n(Hmmsim Routes)</string>
    <string name="text_ugc">More</string>
    <string name="text_download">Download %s</string>
    <string name="text_continue_download">Continue to Download</string>
    <string name="text_downloading">Downloading…</string>
    <string name="text_finishing">Finishing up…</string>
    <string name="text_update">Update %s</string>
    <string name="text_remove">Remove</string>
    <string name="text_submit_log">Submit Logcat to Developers</string>
    <string name="text_log_settag">Set a tag and submit report</string>
    <string name="text_log_warning">Only send a dump if you are instructed by the developers!</string>

    <string name="pref_ugc_disable">Disable UGC</string>
    <string name="pref_ugc_custom">Custom Source</string>
    <string name="pref_engname">Show English Names</string>
    <string name="pref_engname_sum">Show Package names in English</string>
    <string name="pref_cleartemp">Clear all cache files</string>
    <string name="pref_cleartemp_sum">Remove download and image cache</string>
    <string name="pref_disklru_err">%s is not an valid number!</string>
    <string name="pref_sort">Sort by popularity</string>
    <string name="pref_sort_sum">Must select a UGC source to actually get it working</string>
    <string name="pref_allpacks">Show All Packages</string>
    <string name="pref_allpacks_sum">Including the outdated ones</string>
    <string name="pref_rproxy">Use Reverse Proxy</string>
    <string name="pref_rproxy_sum">Try if slow connection is experienced</string>
    <string name="pref_listugc">UGC Source</string>
    <string name="pref_listugc_sum">Choose, customize or disable comment</string>
    <string name="pref_customugc">Custom UGC Source</string>
    <string name="pref_customugc_sum">Manually specify a UGC server that you prefer</string>
    <string name="pref_useindex">Use Index Servers</string>
    <string name="pref_useindex_sum">Fetch source server list from index servers</string>
    <string name="pref_usespider">Use Merged Response Cache</string>
    <string name="pref_usespider_sum">Metadata merged to speed up loading</string>
    <string name="pref_index">Edit Index Servers</string>
    <string name="pref_index_sum">Servers used to fetch Source Servers</string>
    <string name="pref_source">Edit Source Servers</string>
    <string name="pref_source_sum">Servers used to fetch Packages</string>
    <string name="pref_usewebview">WebView instead of TextView</string>
    <string name="pref_usewebview_sum">Use WebView for package description</string>
    <string name="pref_javascript">Enable Javascript in WebView</string>
    <string name="pref_javascript_sum">Balance usability and security yourself</string>
    <string name="pref_disklru">Set DiskLru Size (MB)</string>
    <string name="pref_disklru_sum">Space used to cache images locally</string>
    <string name="pref_loadlog">Show load log</string>
    <string name="pref_loadlog_sum">Show logs at the loading screen</string>
    <string name="pref_general">General</string>
    <string name="pref_server">Server</string>
    <string name="pref_advanced">Advanced</string>

    <string name="about_info">
BVE Content Service Client (BCSC)\
Designed &amp; Programmed by zbx1425\
Contact me at zbx1425@outlook.com.\
Visit project website at https://bvecontentservice.github.io or https://bvecontentservice.gitee.io\
Visit my website at https://www.zbx1425.tk\
\
Hmmsim2 is a paid software developed by Jeminie Interactive. http://jeminie.kr\
\
This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\
This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\
You should have received a copy of the GNU General Public License along with this program.  If not, see https://www.gnu.org/licenses/.\
To acquire a copy of the source code of this software, please refer to https://github.com/BVEContentService/BCSClientAndroid.\
\
BCSC uses OkHttp for networking.\
OkHttp is a nice HTTP client for Android.\
Thanks Square Open Source Inc.\
Licensed under Apache 2.0.\
https://square.github.io/okhttp\
\
BCSC uses DiskLruCache for image caching.\
DiskLruCache is an easy-to-use disk-based LRU cache.\
Thanks Tonyo Francis for such a beautiful library.\
Licensed under Apache 2.0.\
https://github.com/JakeWharton/DiskLruCache\
\
BCSC uses AndPermission to manage android permissions.\
AndPermission makes the complex permission system of android simpler.\
Thanks Zhenjie Yan for this nice piece of work.\
Licensed under Apache 2.0.\
https://github.com/yanzhenjie/AndPermission\
\
Thanks Asnacinjar, Tucson, CSSSC and ECMSC for their support during the developing of this program.\
Quite a few other open-source programs and resources have been used during the development of BCSC, which cannot be completely listed here.\
I will pay my personal respect to all the collaborators of the open source community.</string>

    <string name="default_index" translatable="false">https://bvecontentservice.gitee.io/bcs-index,https://bvecontentservice.github.io/bcs-index</string>
    <string name="default_src" translatable="false">https://api.zbx1425.tk:8953/bcs-src</string>
    <string name="url_start_download" translatable="false">bcs://startDownload</string>
    <string name="text_goto_download">Go to Download</string>
    <string name="pref_interceptrequest">Intercept Some Requests</string>
    <string name="pref_interceptrequest_sum">Turn on only if you are in China Mainland</string>
    <string name="pref_fontsize">Some Font Size</string>
    <string name="pref_fontsize_sum">The percentage of the size of some word</string>
</resources>
