<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.PackDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarLayoutExpandedTextStyle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/thumbnailView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_collapseMode="parallax"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="2"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.activity.PackDetailActivity"
        tools:showIn="@layout/activity_pack_detail">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="70dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textPackName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text=""
                android:textSize="24sp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/packMetadataPlaceholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/noticePlaceholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="" />

            <FrameLayout
                android:id="@+id/descriptionPlaceholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ugcButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorAccentLight"
                android:drawableRight="@drawable/ic_chevron_right_white_24dp"
                android:drawablePadding="10dp"
                android:paddingLeft="40dp"
                android:paddingRight="10dp"
                android:text="@string/text_ugc" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#5A5A5A" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/text_abuse" />

            <FrameLayout
                android:id="@+id/sourceMetadataPlaceholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="0dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/indexMetadataPlaceholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="0dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/appMetadataPlaceholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="0dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp">

            </FrameLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_cloud_download_white_24dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:background="@drawable/btn_shadow_up"
        android:paddingTop="10dp"
        app:layout_dodgeInsetEdges="bottom">

        <ProgressBar
            android:id="@+id/downloadProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:progressDrawable="@drawable/progress_bar_states" />

        <TextView
            android:id="@+id/downloadButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/text_download"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/downloadSpeed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="end|center_vertical"
            android:text="20 KB/s"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="20sp" />
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>